# json-schema2salad

./: .gitignore  404.html  README.md  Taskfile.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: docs.yaml  package.yaml
docs/: cli.md  index.md
docs/explanation/: conversion-model.md
docs/how-to/: convert-schemas.md
docs/reference/: cli.md  conversion-rules.md
docs/tutorials/: first-conversion.md
explanation/conversion-model/: index.html
how-to/convert-schemas/: index.html
reference/cli/: index.html
reference/conversion-rules/: index.html
search/: search_index.json
src/json_schema2salad/: __about__.py  __init__.py  cli.py  models.py  utils.py
tests/: __init__.py  test_cli.py  test_converter.py  test_models.py
tutorials/first-conversion/: index.html
